apex-validation-rules/main/core/objects/ApexValidationRule__mdt/fields/CriteriaLogicType__c.field-meta.xml
<CustomField>
    <fullName>CriteriaLogicType__c</fullName>
    <label>Criteria Logic Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
                <default>true</default>
                <label>All Criteria Must Be Met (AND)</label>
            </value>
            <value>
                <fullName>OR</fullName>
                <label>Any Criteria Must Be Met (OR)</label>
            </value>
            <value>
                <fullName>Custom</fullName>
                <label>Custom Logic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>