apex-validation-rules/main/core/objects/ApexValidationRule__mdt/fields/CustomCriteriaLogic__c.field-meta.xml
<CustomField>
    <fullName>CustomCriteriaLogic__c</fullName>
    <label>Custom Criteria Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>