apex-validation-rules/main/core/objects/ApexValidationRule__mdt/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>Error Message</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>