apex-validation-rules/main/core/objects/ApexValidationRule__mdt/fields/SObjectType__c.field-meta.xml
<CustomField>
    <fullName>SObjectType__c</fullName>
    <label>SObject Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>