apex-validation-rules/main/core/objects/ApexValidationRule__mdt/validationRules/CustomCriteriaLogicRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CustomCriteriaLogicRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISPICKVAL(CriteriaLogicType__c, &apos;Custom&apos;),
   ISBLANK(CustomCriteriaLogic__c)
)</errorConditionFormula>
    <errorDisplayField>CustomCriteriaLogic__c</errorDisplayField>
    <errorMessage>Custom Criteria Logic is required when Criteria Logic Type = &apos;Custom Logic&apos;</errorMessage>
</ValidationRule>