apex-validation-rules/main/core/objects/ApexValidationRule__mdt/validationRules/InvalidCustomCriteriaLogicUsage.validationRule-meta.xml
<ValidationRule>
    <fullName>InvalidCustomCriteriaLogicUsage</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISPICKVAL(CriteriaLogicType__c, &apos;Custom&apos;)),
  NOT(ISBLANK(CustomCriteriaLogic__c))
)</errorConditionFormula>
    <errorDisplayField>CustomCriteriaLogic__c</errorDisplayField>
    <errorMessage>Custom Criteria Logic can only be populated when Criteria Logic = &apos;Custom&apos;</errorMessage>
</ValidationRule>