apex-validation-rules/main/core/objects/ApexValidationRule__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>SObjectType__c</columns>
    <columns>IsActive__c</columns>
    <columns>CriteriaLogicType__c</columns>
    <columns>CustomCriteriaLogic__c</columns>
    <columns>ErrorMessage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>